src/main/java/com/example/library_application/validation/exeptions/BookTakeException.java
package com.example.library_application.validation.exeptions;

public class BookTakeException extends RuntimeException {
    public BookTakeException(String message) {
        super(message);
    }
}
