src/main/java/com/example/library_application/errors/CoreError.java
package com.example.library_application.errors;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;

@AllArgsConstructor
@Data
@NoArgsConstructor
public class CoreError {
    private String message;
}
